--- a/index.html
+++ b/index.html
@@ -8,12 +8,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
     <title>Aivazovski</title>
   </head>
   <body>
-    zdvdvsdbv
+    <header class="header" aria-label="header">
+      <div class="container">
+        <nav class="nav" aria-label="header navigation">
+          <ul class="nav-list" aria-label="header navigation list">
+            <li>
+              <a href="#" class="nav-link" aria-label="link to home">Home</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link" aria-label="link to about">About</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link" aria-label="link to history"
+                >History</a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav-link" aria-label="link to portfolio"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav-link" aria-label="link to contacts"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main aria-label="main">
+      <section class="home" aria-label="home section">
+        <div class="container">
+          <h1 class="home-title" aria-label="home title">
+            Ivan Constantinovich Aivazovski
+          </h1>
+          <p class="home-description" aria-label="home description">
+            Russian marine painter of Armenian origin, collector, philanthropist
+          </p>
+          <img src="/assets/webp/hero.webp" class="home-image" />
+        </div>
+      </section>
+      <section class="about" aria-label="about section">
+        <div class="container">
+          <h2 class="about-title">About</h2>
+          <h3 class="about-subtitle-ru" aria-label="about about-subtitle-ru">
+            Ива́н Константи́нович Айвазо́вский – русский живописец-маринист
+            армянского происхождения, коллекционер, меценат.
+          </h3>
+          <p class="about-description-ru" aria-label="about description">
+            Будучи художником с мировой известностью, Иван Константинович
+            Айвазовский предпочитал жить и работать на своей родине — в Крыму.
+            Айвазовский наиболее известен своими морскими пейзажами, которые
+            составляют больше половины его работ. Художник считается одним из
+            величайших маринистов всех времён.
+          </p>
+
+          <hr class="divider" />
+
+          <h3 class="about-subtitle-en" aria-label="about-subtitle-en">
+            Ivan Konstantinovich Aivazovsky - Russian marine painter of Armenian
+            origin, collector, philanthropist.
+          </h3>
+          <p class="about-description-en" aria-label="about description">
+            Being a world famous artist, Ivan Konstantinovich Aivazovsky
+            preferred to live and work in his homeland - in the Crimea.
+            Aivazovsky is best known for his seascapes, which make up more than
+            half of his work. The artist is considered one of the greatest
+            marine painters of all time.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
