add history section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
           </p>
         </div>
       </section>
+      <section class="history" aria-label="history">
+        <div class="container">
+          <h2 class="history-title">History</h2>
+          <img src="assets/webp/home.webp" class="history-img" />
+          <p class="history-descriprion">
+            Дом в котором родился Айвазовский | The house where Aivazovsky was
+            born
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
