--- a/index.html
+++ b/index.html
@@ -14,28 +14,41 @@
     <title>Aivazovski</title>
   </head>
   <body>
-    <header class="header" aria-label="header">
+    <header class="header" aria-label="header" id="header-id">
       <div class="container">
         <nav class="nav" aria-label="header navigation">
           <ul class="nav-list" aria-label="header navigation list">
             <li>
-              <a href="#" class="nav-link" aria-label="link to home">Home</a>
+              <a href="#home-id" class="nav-link" aria-label="link to home"
+                >Home</a
+              >
             </li>
             <li>
-              <a href="#" class="nav-link" aria-label="link to about">About</a>
+              <a href="#about-id" class="nav-link" aria-label="link to about"
+                >About</a
+              >
             </li>
             <li>
-              <a href="#" class="nav-link" aria-label="link to history"
+              <a
+                href="#history-id"
+                class="nav-link"
+                aria-label="link to history"
                 >History</a
               >
             </li>
             <li>
-              <a href="#" class="nav-link" aria-label="link to portfolio"
+              <a
+                href="#portfolio-id"
+                class="nav-link"
+                aria-label="link to portfolio"
                 >Portfolio</a
               >
             </li>
             <li>
-              <a href="#" class="nav-link" aria-label="link to contacts"
+              <a
+                href="#contacts-id"
+                class="nav-link"
+                aria-label="link to contacts"
                 >Contacts</a
               >
             </li>
@@ -44,7 +57,7 @@
       </div>
     </header>
     <main aria-label="main">
-      <section class="home" aria-label="home section">
+      <section class="home" aria-label="home section" id="home-id">
         <div class="container">
           <h1 class="home-title" aria-label="home title">
             Ivan Constantinovich Aivazovski
@@ -55,7 +68,7 @@
           <img src="/assets/webp/hero.webp" class="home-image" />
         </div>
       </section>
-      <section class="about" aria-label="about section">
+      <section class="about" aria-label="about section" id="about-id">
         <div class="container">
           <h2 class="about-title">About</h2>
           <h3 class="about-subtitle-ru" aria-label="about about-subtitle-ru">
@@ -85,13 +98,31 @@
           </p>
         </div>
       </section>
-      <section class="history" aria-label="history">
+      <section class="history" aria-label="history" id="history-id">
         <div class="container">
           <h2 class="history-title">History</h2>
           <img src="assets/webp/home.webp" class="history-img" />
           <p class="history-descriprion">
             Дом в котором родился Айвазовский | The house where Aivazovsky was
             born
+          </p>
+        </div>
+      </section>
+      <section class="portfolio" aria-label="portfolio" id="portfolio-id">
+        <div class="container">
+          <h2 class="portfolio-title" aria-label="portfolio-title">
+            Portfolio
+          </h2>
+          <img src="assets/webp/rainbow.webp" class="portfolio-img" />
+          <p class="portfolio-description">
+            Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857
+          </p>
+          <img src="assets/webp/sea.webp" class="portfolio-img" />
+          <p class="portfolio-description">Радуга, 1873 г. | Rainbow, 1873</p>
+          <img src="assets/webp/winter.webp" class="portfolio-img" />
+          <p class="portfolio-description">
+            Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning,
+            1893
           </p>
         </div>
       </section>
