add contacts section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,40 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="contacts" aria-label="contacts" id="contacts-id">
+      <div class="container">
+        <h2 class="contacts-title">Contacts</h2>
+        <button class="contacts-button" target="_blank">
+          <a href="http://ayvazovskiy.su/" class="button-link"
+            >ayvazovskiy.su</a
+          >
+        </button>
+        <address class="socials" aria-label="social icons">
+          <a href="http://youtube.com" target="_blank">
+            <svg class="social-icon" aria-label="youtube icon">
+              <use href="assets/icon.svg#youtube"></use>
+            </svg>
+          </a>
+          <a href="http://linkedin.com" target="_blank">
+            <svg class="social-icon" aria-label="linkedin icon">
+              <use href="assets/icon.svg#linkedin"></use>
+            </svg>
+          </a>
+          <a href="http://instagram.com" target="_blank">
+            <svg class="social-icon" aria-label="instagram icon">
+              <use href="assets/icon.svg#instagram"></use>
+            </svg>
+          </a>
+          <a href="http://facebook.com" target="_blank">
+            <svg class="social-icon" aria-label="facebook icon">
+              <use href="assets/icon.svg#facebook"></use>
+            </svg>
+          </a>
+        </address>
+        <p class="contacts-info" aria-label="just for notice">
+          More works you can see in these social networks
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
