--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <p class="home-description" aria-label="home description">
             Russian marine painter of Armenian origin, collector, philanthropist
           </p>
-          <img src="/assets/webp/hero.webp" class="home-image" />
+          <img src="assets/webp/hero.webp" class="home-image" />
         </div>
       </section>
       <section class="about" aria-label="about section" id="about-id">
