--- a/index.html
+++ b/index.html
@@ -56,6 +56,62 @@
         </nav>
       </div>
     </header>
+    <div class="mobile-nav" aria-label="mobile-nav">
+      <label for="toggler-id">
+        <svg class="mobile-nav-burger" aria-label="burger">
+          <use href="assets/icon.svg#burger"></use>
+        </svg>
+      </label>
+
+      <input type="checkbox" id="toggler-id" class="mobile-nav-toggler" />
+      <nav class="mobile-nav-menu" aria-label="header navigation">
+        <ul class="mobile-nav-list" aria-label="header navigation list">
+          <li>
+            <a href="#home-id" class="mobile-nav-link" aria-label="link to home"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a
+              href="#about-id"
+              class="mobile-nav-link"
+              aria-label="link to about"
+              >About</a
+            >
+          </li>
+          <li>
+            <a
+              href="#history-id"
+              class="mobile-nav-link"
+              aria-label="link to history"
+              >History</a
+            >
+          </li>
+          <li>
+            <a
+              href="#portfolio-id"
+              class="mobile-nav-link"
+              aria-label="link to portfolio"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a
+              href="#contacts-id"
+              class="mobile-nav-link"
+              aria-label="link to contacts"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+
+        <label for="toggler-id" class="mobile-nav-close">
+          <svg class="mobile-nav-cross" aria-label="cross">
+            <use href="assets/icon.svg#cross"></use>
+          </svg>
+        </label>
+      </nav>
+    </div>
     <main aria-label="main">
       <section class="home" aria-label="home section" id="home-id">
         <div class="container">
